remove excess spacing from hr

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -223,8 +223,10 @@ a {
     background-size: 100% 0.15rem;
     border: 0;
     margin: 0;
-    padding-bottom: 3rem;
-    padding-top: 3rem;
+    //padding-bottom: 3rem;
+    //padding-top: 3rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
   }
 
   // Code block.
